// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForwarderForm/>: existed forwarder. Test with snapshot. 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      for="1"
    >
      Name
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control"
        id="1"
        type="text"
        value="Google"
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      for="2"
    >
      IPv4
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control"
        id="2"
        type="text"
        value="8.8.8.8"
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      for="3"
    >
      IPv6
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control"
        id="3"
        type="text"
        value="2001:4860:4860::8888"
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      for="4"
    >
      TLS type
    </label>
    <select
      class="custom-select"
      id="4"
    >
      <option
        value="no"
      >
        No TLS
      </option>
      <option
        value="hostname"
      >
        Hostname
      </option>
      <option
        value="pin"
      >
        Pin
      </option>
    </select>
  </div>
  <button
    class="btn btn-primary  col-sm-12 col-lg-3"
    type="button"
  >
     
     
    Save forwarder
  </button>
</div>
`;

exports[`<ForwarderForm/>: new forwarder. Test with snapshot. 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      for="1"
    >
      Name
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control  is-invalid"
        id="1"
        type="text"
        value=""
      />
    </div>
    <div
      class="invalid-feedback"
    >
      Forwarder name should have at least one symbol.
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      for="2"
    >
      IPv4
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control  is-invalid"
        id="2"
        type="text"
        value=""
      />
    </div>
    <div
      class="invalid-feedback"
    >
      Define at least one of the IP addresses of the forwarder.
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      for="3"
    >
      IPv6
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control  is-invalid"
        id="3"
        type="text"
        value=""
      />
    </div>
    <div
      class="invalid-feedback"
    >
      Define at least one of the IP addresses of the forwarder.
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      for="4"
    >
      TLS type
    </label>
    <select
      class="custom-select"
      id="4"
    >
      <option
        value="no"
      >
        No TLS
      </option>
      <option
        value="hostname"
      >
        Hostname
      </option>
      <option
        value="pin"
      >
        Pin
      </option>
    </select>
  </div>
  <button
    class="btn btn-primary  col-sm-12 col-lg-3"
    disabled=""
    type="button"
  >
     
     
    Save forwarder
  </button>
</div>
`;
